# pfRICH

./: CMakeLists.txt  CondorSubmitter.csh  Draw_model.C  README.AYK  README.BP  README.CERN  README.md  driver.sh  hepmc_writer.C  pfRICH.cc  readTree.C  readTreeQA.C  runSimu.sh
Visualization/: Create_xml.C  Draw_model.C  README.md  Recoloring.C
cern/include/: CERNDetectorConstruction.h  CERNPrimaryGeneratorAction.h  cern.default.h
cern/source/: CERNDetectorConstruction.cc  CERNDetectorConstruction.cc~  CERNPrimaryGeneratorAction.cc  CERNSetup.cc
curves/: beta.cc  cerenkov.C
database/: BelleII.xml  RefractiveIndex.orig.txt  RefractiveIndex.txt  TrackingParameterization.txt
epic/include/: EpicDetectorConstruction.h  EpicPrimaryGeneratorAction.h  MagneticField.h  epic.default.h
epic/source/: Acrylic.cc  Aerogel.cc  EpicDetectorConstruction.cc  EpicPrimaryGeneratorAction.cc  EpicSetup.cc  Mirrors.cc  Vessel.cc
examples/: multi-eval.C  pfrich.C  vis.mac
ftbf/include/: FTBFDetectorConstruction.h  FTBFPrimaryGeneratorAction.h  ftbf.default.h  ftbf.h
ftbf/source/: FTBFDetectorConstruction.cc  FTBFPrimaryGeneratorAction.cc  FTBFSetup.cc
g4irt/include/: CherenkovStackingAction.h  CherenkovSteppingAction.h  G4RadiatorMaterial.h  TransientTrackInformation.h  g4dRIChOptics.hh
g4irt/source/: CherenkovMirror.cc  CherenkovStackingAction.cc  CherenkovSteppingAction.cc  G4Object.cc  G4RadiatorMaterial.cc
gdml/: ip6_brycecanyon.modified.gdml  pfRICH-hrppd-only.gdml  pfRICH.v01.gdml  pfRICH.v02.gdml  pfrich_gdml.xml  tracking_only.modified.gdml
include/: DetectorConstruction.h  Materials.h  PrimaryGeneratorAction.h  TofPetMultiColumn.h  fixed.h  tuning.ak.h  tuning.cc.h  tuning.h  tuning_in_git_repository.h
macro/: pfrich.mac  vis-cern.mac  vis-simple.mac  vis-tstand.mac  vis.mac
macro/cc/: vis.mac
obsolete/ak/: display.C  example_hepmc_reader.C  example_hepmc_writer.C  hepmc_writer_tof_pion.C  hepmc_writer_two_particles.C  tof-eval.C
obsolete/cc/: hepmc_writer_two_particles.C  hepmc_writer_two_particles_full.C
obsolete/jd/: pfrich.C
scripts/: agelRIndexCurve.C  e-eval.C  hepmc_writer_two_particles.C  hit-map-cern-1x1.C  hit-map-cern-2x2-ver1.C  hit-map-cern-2x2-ver2.C  hit-map-cern-2x2.C  hit-map-epic.C  hit-map-ftbf-1x1.C  hit-map-ftbf-2x2.C  hit-map-simple.C  hit-map-tstand.C  multi-eval-ftbf.C  multi-eval.C  pfrich.C  pion-kaon-close-edge.hepmc  reco-cern.C  reco-epic-LUT.C  reco-epic.C  reco-ftbf.C  reco-simple.C
scripts/ak/: display.C  e-eval.C  gas-eval.C  hepmc_writer_two_particles.C  multi-eval.C  xray.C
scripts/cc/: AutomatedSimulationChain.sh  FitHisto_Iterative.C  hepmc_writer_two_particles_user.C  multi-eval.C
share/include/: AsphericLens.h  CERNrunConfig.h  DetectorConstruction.h  Materials.h  RunAction.h  XmlTree.h  hrppd.default.h  share.default.h
share/source/: AsphericLens.cc  CERNrunConfig.cc  DetectorConstruction.cc  HRPPD.cc  Materials.cc
simple/include/: SimpleDetectorConstruction.h  SimplePrimaryGeneratorAction.h  simple.default.h  simple.h
simple/source/: SimpleDetectorConstruction.cc  SimplePrimaryGeneratorAction.cc  SimpleSetup.cc
source/: Acrylic.cc  Aerogel.cc  DetectorConstruction.cc  MagneticField.cc  Materials.cc  Mirrors.cc  PhotonDetectors.cc  PrimaryGeneratorAction.cc  RunAction.cc  TofPetMultiColumn.cc  Vessel.cc  XmlReader.cc
tstand/include/: TestStandDetectorConstruction.h  TestStandPrimaryGeneratorAction.h  tstand.default.h  tstand.h
tstand/source/: TestStandDetectorConstruction.cc  TestStandPrimaryGeneratorAction.cc  TestStandSetup.cc
